--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,8 @@
     <string name="account_empty">账号不能为空</string>
     <string name="password_empty">密码不能为空</string>
     <string name="login">登录</string>
+    <string name="my_orders">我的订单</string>
+    <string name="parking_rent">车位租赁</string>
+    <string name="version_info">版本信息</string>
+    <string name="service_center">客服中心</string>
 </resources>
