update Registration rules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,8 +61,13 @@
     <string name="action_settings">Settings</string>
 
     <string name="account_empty">账号不能为空</string>
+    <string name="account_rule">账户需由字母数字下划线组成且开头必须是字母，不能超过16位</string>
     <string name="password_empty">密码不能为空</string>
+    <string name="password_rule">密码需由字母和数字构成，不能超过16位</string>
+
     <string name="carNo_empty">车牌号不能为空</string>
+    <string name="carNo_rule">车牌号仅允许以汉字开头，后面可录入六个字符，由大写英文字母和阿拉伯数字组成。</string>
+
     <string name="login">登录</string>
     <string name="my_orders">我的订单</string>
     <string name="parking_rent">车位租赁</string>
